--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -25,23 +25,23 @@
   ansible.builtin.copy:
     src: 20auto-upgrades
     dest: /etc/apt/apt.conf.d/
-    mode: 0644
+    mode: "0644"
 
 - name: Configure unattended upgrades
   ansible.builtin.copy:
     src: 50unattended-upgrades
     dest: /etc/apt/apt.conf.d/
-    mode: 0644
+    mode: "0644"
 
 - name: Tweak readline
   ansible.builtin.lineinfile:
     line: "set enable-bracketed-paste off"
     path: /root/.inputrc
     create: yes
-    mode: 0644
+    mode: "0644"
 
 - name: Htop config
   ansible.builtin.copy:
     src: htoprc
     dest: /root/.config/htop/
-    mode: 0644
+    mode: "0644"
