--- a/playbooks/roles/bridgeline/tasks/main.yaml
+++ b/playbooks/roles/bridgeline/tasks/main.yaml
@@ -32,4 +32,4 @@
     line: "Bridge obfs4 {{ '%15s' | format(ansible_eth0.ipv4.address) }}:{{ '%-5s' | format(obfs4_port) }} {{ fp }} {{ cert }} iat-mode=0  # {{ ansible_hostname }}"
     path: /tmp/bridgeline.txt
     create: yes
-    mode: 0600
+    mode: "0600"
