--- a/playbooks/roles/setup/tasks/timer.yaml
+++ b/playbooks/roles/setup/tasks/timer.yaml
@@ -4,13 +4,13 @@
   ansible.builtin.file:
     state: directory
     path: "/etc/systemd/system/apt-daily.timer.d/"
-    mode: 0755
+    mode: "0755"
 
 - name: Configure update package list time
   ansible.builtin.template:
     src: timer.j2
     dest: /etc/systemd/system/apt-daily.timer.d/override.conf
-    mode: 0644
+    mode: "0644"
   register: timer_state
 
 # the apt-daily timer should call unattended upgrades already but configure it here nevertheless
@@ -19,13 +19,13 @@
   ansible.builtin.file:
     state: directory
     path: "/etc/systemd/system/apt-daily-upgrade.timer.d/"
-    mode: 0755
+    mode: "0755"
 
 - name: Configure unattended upgrades time
   ansible.builtin.template:
     src: upgrade.j2
     dest: /etc/systemd/system/apt-daily-upgrade.timer.d/override.conf
-    mode: 0644
+    mode: "0644"
   register: upgrade_timer_state
 
 - name: Restart apt-daily timer
