--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -44,6 +44,7 @@
       ansible.builtin.import_tasks: hint.yaml
       tags:
         - hint
+      when: contact_info is not defined or contact_info == ""
 
     - name: Reboot
       ansible.builtin.import_tasks: reboot.yaml
