fix 0ade374d0d partly

--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -44,7 +44,7 @@
       ansible.builtin.import_tasks: hint.yaml
       tags:
         - hint
-      when: contact_info is not defined or contact_info == ""
+      when: contact_info is defined and contact_info != ""
 
     - name: Reboot
       ansible.builtin.import_tasks: reboot.yaml
