--- a/playbooks/roles/info/defaults/main.yaml
+++ b/playbooks/roles/info/defaults/main.yaml
@@ -1,7 +1,6 @@
 ---
-
 log_lines: 10
 
-log_unattended: '/var/log/unattended-upgrades/unattended-upgrades-dpkg.log'
+log_unattended: "/var/log/unattended-upgrades/unattended-upgrades-dpkg.log"
 
-log_system: '/var/log/messages'
+log_system: "/var/log/messages"
