--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -1,10 +1,9 @@
 ---
-
 - name: Ansible defaults
   ansible.builtin.setup:
     gather_subset:
-      - '!all'
-      - 'all_ipv4_addresses'
+      - "!all"
+      - "all_ipv4_addresses"
     gather_timeout: 20
 
 - name: Main
