--- a/playbooks/roles/setup/tasks/tor.yaml
+++ b/playbooks/roles/setup/tasks/tor.yaml
@@ -1,5 +1,4 @@
 ---
-
 - name: Sysctl config
   ansible.builtin.copy:
     src: 20-tor.conf
@@ -14,18 +13,18 @@
 
 - name: Configure repository "backports"
   ansible.builtin.apt_repository:
-    filename: 'backports'
+    filename: "backports"
     repo: "deb http://mirror.hetzner.com/debian/packages {{ ansible_distribution_release }}-backports main contrib non-free"
     state: present
 
 - name: Get Tor repository apt key
   ansible.builtin.apt_key:
-    url: 'https://deb.torproject.org/torproject.org/A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89.asc'
+    url: "https://deb.torproject.org/torproject.org/A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89.asc"
     state: present
 
 - name: Configure repository "tor"
   ansible.builtin.apt_repository:
-    filename: 'tor'
+    filename: "tor"
     repo: "deb https://deb.torproject.org/torproject.org {{ ansible_distribution_release }} main"
     state: present
 
