--- a/inventory/group_vars/public.yaml
+++ b/inventory/group_vars/public.yaml
@@ -1,14 +1,13 @@
 ---
-
-contact_info: ''
-nickname_prefix: ''
+contact_info: ""
+nickname_prefix: ""
 
 torrc_public:
-  - name: 'PublishServerDescriptor'
-    value: 'bridge'
-  - name: 'Nickname'
+  - name: "PublishServerDescriptor"
+    value: "bridge"
+  - name: "Nickname"
     value: "{{ (nickname_prefix + ansible_hostname)[:19] }}"
-  - name: 'ContactInfo'
+  - name: "ContactInfo"
     value: "{{ contact_info }}"
 
 torrc_config: "{{ torrc_generic + torrc_public }}"
