--- a/playbooks/roles/info/tasks/log-system.yaml
+++ b/playbooks/roles/info/tasks/log-system.yaml
@@ -1,5 +1,4 @@
 ---
-
 - name: Grep {{ log_system }}
   changed_when: false
   ansible.builtin.shell: |
@@ -9,5 +8,4 @@
 - name: Results
   ansible.builtin.debug:
     msg: "{{ result.stdout.split('\n') }}"
-  when:
-    result.stdout_lines | length != 5
+  when: result.stdout_lines | length != 5
