--- a/playbooks/roles/info/tasks/clients.yaml
+++ b/playbooks/roles/info/tasks/clients.yaml
@@ -1,10 +1,15 @@
 ---
 - name: Get unique clients from {{ log_notice }}
   changed_when: false
-  ansible.builtin.shell: |
-    /usr/bin/tac {{ log_notice }} {{ log_notice }}.1 2>/dev/null | /usr/bin/grep --text -m 4 -F ' unique clients.' | /usr/bin/tac
+  ansible.builtin.shell: >-
+    /usr/bin/tac {{ log_notice }} {{ log_notice }}.1 2>/dev/null |
+    /usr/bin/grep --text -m 4 -F ' unique clients.' |
+    cut -f2- -d',' |
+    grep -Po ' \d+ ' |
+    tac |
+    xargs
   register: result
 
 - name: Result
   ansible.builtin.debug:
-    msg: "{{ result.stdout.split('\n') }}"
+    msg: "{{ ansible_hostname }} {{ result.stdout }}"
