--- a/playbooks/roles/info/tasks/orport.yaml
+++ b/playbooks/roles/info/tasks/orport.yaml
@@ -11,5 +11,5 @@
 
 - name: Check if ORPort would be changed
   ansible.builtin.debug:
-    msg: "current: {{ curr_port }}, future: {{ or_port }}"
+    msg: "{{ ansible_hostname }}  current: {{ curr_port }}, future: {{ or_port }}"
   when: curr_port | int != or_port
