--- a/playbooks/roles/lib/hashed-fingerprint.yaml
+++ b/playbooks/roles/lib/hashed-fingerprint.yaml
@@ -1,8 +1,7 @@
 ---
 - name: Get hashed fingerprint
   changed_when: false
-  ansible.builtin.shell: |
-    cut -f2 -d' ' /var/lib/tor/hashed-fingerprint
+  ansible.builtin.command: cut -f2 -d' ' /var/lib/tor/hashed-fingerprint
   register: result
 
 - name: Set fact
