--- a/playbooks/roles/info/tasks/uptime.yaml
+++ b/playbooks/roles/info/tasks/uptime.yaml
@@ -9,10 +9,10 @@
   ansible.builtin.command: "uptime -ps"
   register: result
 
-- name: Fill result to /tmp file
+- name: File results for uptime
   delegate_to: localhost
   ansible.builtin.lineinfile:
     create: yes
     line: "{{ ansible_hostname }} Tor {{ tor_status.status.ExecMainStartTimestamp }} uptime {{ result.stdout }}"
-    path: "/tmp/uptime"
+    path: "{{ tmp_dir }}/uptime"
     regex: "^{{ ansible_hostname }} "
