--- a/playbooks/roles/setup/tasks/reboot.yaml
+++ b/playbooks/roles/setup/tasks/reboot.yaml
@@ -3,12 +3,18 @@
   ansible.builtin.package_facts:
     manager: auto
 
-- name: Uname
+- name: Current running kernel
   changed_when: false
-  ansible.builtin.command: "uname -v"
+  ansible.builtin.shell: |
+    uname -v | cut -f 4 -d ' '
+    uname -r | cut -f 3 -d '-'
   register: result
 
-- name: Reboot into installed kernel
+- name:
+  ansible.builtin.set_fact:
+    linux_image_arch: "linux-image-{{ result.stdout_lines[1] }}"
+
+- name: Reboot into newer kernel
   ansible.builtin.reboot:
     msg: "Reboot initiated by Ansible"
     connect_timeout: 5
@@ -16,4 +22,4 @@
     pre_reboot_delay: 0
     post_reboot_delay: 30
     test_command: uptime
-  when: force_reboot or not result.stdout | regex_search(ansible_facts.packages['linux-image-amd64'][0].version)
+  when: not result.stdout_lines[0] == ansible_facts.packages[linux_image_arch][0].version
