--- a/playbooks/roles/info/tasks/bto.yaml
+++ b/playbooks/roles/info/tasks/bto.yaml
@@ -10,6 +10,6 @@
   delegate_to: localhost
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_hostname }} {{ result.content | split('\n') | select('search', 'functional') | first }}"
+    line: "{{ ansible_hostname }} {{ result.content | split('\n') | select('search', 'functional') | first | default('n/a n/a n/a') }}"
     path: "{{ tmp_dir }}/bto"
     regex: "^{{ ansible_hostname }} "
