force restart instead only reload

--- a/playbooks/roles/setup/tasks/tor.yaml
+++ b/playbooks/roles/setup/tasks/tor.yaml
@@ -82,6 +82,6 @@
 - name: Enable Tor service
   ansible.builtin.systemd:
     name: "tor"
-    state: reloaded
+    state: restarted
     daemon_reload: yes
     enabled: yes
