use free strategy and to not include log file parsing in info as default

--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -22,24 +22,28 @@
   tags:
     - log
     - log-notice
+    - never
 
 - name: Log warn
   ansible.builtin.import_tasks: log-warn.yaml
   tags:
     - log
     - log-warn
+    - never
 
 - name: Log unattended
   ansible.builtin.import_tasks: log-unattended.yaml
   tags:
     - log
     - log-unattended
+    - never
 
 - name: Log system
   ansible.builtin.import_tasks: log-system.yaml
   tags:
     - log
     - log-system
+    - never
 
 - name: Uname
   ansible.builtin.import_tasks: uname.yaml
