--- a/playbooks/roles/setup/tasks/hint.yaml
+++ b/playbooks/roles/setup/tasks/hint.yaml
@@ -3,7 +3,7 @@
   ansible.builtin.import_tasks: ../../lib/hashed-fingerprint.yaml
 
 # https://github.com/nusenu/ContactInfo-Information-Sharing-Specification
-- name: "Add to ./public_html/.well-known/tor-relay/hashed-bridge-rsa-fingerprint.txt"
+- name: Add to ./public_html/.well-known/tor-relay/hashed-bridge-rsa-fingerprint.txt
   ansible.builtin.debug:
     msg:
       - "# {{ ansible_hostname }}"
