--- a/playbooks/roles/lib/hashed-fingerprint.yaml
+++ b/playbooks/roles/lib/hashed-fingerprint.yaml
@@ -6,4 +6,4 @@
 
 - name: Set fact
   ansible.builtin.set_fact:
-    hashed_fingerprint: "{{ result.stdout.split('\n')[0] }}"
+    hashed_fingerprint: "{{ result.stdout_lines[0] }}"
