--- a/playbooks/roles/info/tasks/bto.yaml
+++ b/playbooks/roles/info/tasks/bto.yaml
@@ -7,6 +7,7 @@
   register: result
 
 - name: File results for bto
+  no_log: true
   delegate_to: localhost
   ansible.builtin.lineinfile:
     create: yes
