--- a/playbooks/roles/info/tasks/clients.yaml
+++ b/playbooks/roles/info/tasks/clients.yaml
@@ -11,6 +11,7 @@
   register: result
 
 - name: File results for clients
+  no_log: true
   delegate_to: localhost
   ansible.builtin.lineinfile:
     create: yes
