--- a/playbooks/roles/info/tasks/uptime.yaml
+++ b/playbooks/roles/info/tasks/uptime.yaml
@@ -10,6 +10,7 @@
   register: result
 
 - name: File results for uptime
+  no_log: true
   delegate_to: localhost
   ansible.builtin.lineinfile:
     create: yes
