--- a/playbooks/roles/info/tasks/uname.yaml
+++ b/playbooks/roles/info/tasks/uname.yaml
@@ -5,6 +5,7 @@
   register: result
 
 - name: File results for uname
+  no_log: true
   delegate_to: localhost
   ansible.builtin.lineinfile:
     create: yes
