--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -4,7 +4,6 @@
     force_apt_get: true
     update_cache: yes
     upgrade: dist
-  register: apt_dist_output
 
 - name: Install needed software
   ansible.builtin.apt:
@@ -54,18 +53,16 @@
   ansible.builtin.shell: |
     uname -v | cut -f 4 -d ' '
     uname -r | cut -f 3 -d '-'
-  register: result
+  register: _uname
 
 - name: Set fact for linux image package name
   ansible.builtin.set_fact:
-    linux_image_arch: "linux-image-{{ result.stdout_lines[1] }}"
+    linux_image_arch: "linux-image-{{ _uname.stdout_lines[1] }}"
 
 - name: Reboot into newer kernel
   ansible.builtin.reboot:
-    msg: "Reboot initiated by Ansible"
     connect_timeout: 5
     reboot_timeout: 120
     pre_reboot_delay: 0
-    post_reboot_delay: 30
-    test_command: uptime
-  when: not result.stdout_lines[0] == ansible_facts.packages[linux_image_arch][0].version
+    post_reboot_delay: 20
+  when: not _uname.stdout_lines[0] == ansible_facts.packages[linux_image_arch][0].version
