--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -2,7 +2,7 @@
 log_notice: "/var/log/tor/notice.log"
 log_warn: "/var/log/tor/warn.log"
 
-ipv4: '{{ ansible_eth0.ipv4.address }}'
+ipv4: "{{ ansible_eth0.ipv4.address }}"
 ipv6: '{{ ansible_eth0.ipv6 | selectattr("scope", "eq", "global") | map(attribute="address") | replace("''", "") }}'
 
 or_port: "{{ range(1024, 65535) | random(seed=ansible_hostname + ipv4 + ipv6 + seed_or_port) }}"
